<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="hello">MathToolz</string>
    <string name="app_name">SchoolTools</string>
    <string name="welcome_msg">Welcome to MathToolz</string>
    <string name="square_root_symbol">√¯¯</string>
    <string name="squared_two">"X\u00B2"</string>
    <string name="qube">"X\u00B3"</string>
    <string name="delete_numbers">"\u21D0"</string>
    <string name="degree_celsius">"\u2103"</string>
    <string name="pi">"\u03C0"</string>

    <style name="ButtonText">
        <item name="android:layout_width">34dp</item>
        <item name="android:layout_height">40dp</item>
        <item name="android:textColor">#ffffff</item>
        <item name="android:gravity">center</item>
        <item name="android:layout_margin">3dp</item>
        <item name="android:textSize">20dp</item>
        <item name="android:textStyle"></item>
        <item name="android:shadowColor">#000000</item>
        <item name="android:shadowDx">1</item>
        <item name="android:shadowDy">1</item>
        <item name="android:shadowRadius">2</item>
    </style>

    <string name="title_activity_tools">Tools</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_area">Area</string>
    <string name="title_activity_aera">Aera</string>
    <string name="title_activity_areaweb">Areaweb</string>
    <string name="title_activity_factor">Factor</string>
    <string name="title_activity_area_pg">AreaPG</string>
    <string name="title_activity_factorpg">Factorpg</string>
    <string name="title_activity_fcal">Fcal</string>
    <string name="title_activity_facl">Facl</string>
    <string name="title_activity_linnear">Linnear</string>
    <string name="title_activity_factorcal">Factorcal</string>
    <string name="title_activity_areacal">Areacal</string>
    <string name="title_activity_fcalulator">FCalulator</string>
    <string name="title_activity_linearcal">Linearcal</string>
    <string name="title_activity_graph">Graph</string>
    <string name="title_activity_qcal">Qcal</string>
    <string name="title_activity_ptcal">Ptcal</string>
    <string name="add_values">Add values to the chart</string>
    <string name="x">X</string>
    <string name="y">Y</string>
    <string name="add">Add</string>
    <string name="new_series">New Line Segment</string>
    <string name="menu_theme">Theme</string>
    <string name="X1">X<sub><small>1</small></sub></string>
    <string name="Y1">Y<sub><small>1</small></sub></string>
    <string name="X2">X<sub><small>2</small></sub></string>
    <string name="Y2">Y<sub><small>2</small></sub></string>
    <string name="darrow">) (</string>
    <string name="rarrow">(</string>
    <string name="larrow">)</string>
    <string name="comma">,</string>
    <string name="title_activity_slope">Slope</string>
    <string name="prob">Probability</string>
    <string name="title_activity_distance">Distance</string>
    <string name="title_activity_3ddistance">Distance in 3D Space</string>
    <string name="neg"><sup>-1</sup></string>
    <string name="get_slope">Get Slope</string>
    <string name="get_distance">Get Distance</string>
    <string name="title_activity_mid">Midpoint of line</string>
    <string name="get_mid">Get Midpoint</string>
    <string name="point1">Point 1</string>
    <string name="point2">Point 2</string>
    <string name="title_activity_theme">Theme Chooser</string>
    <string name="blue_dark">Blue Dark</string>
    <string name="blue_light">Blue Light</string>
    <string name="green_dark">Green Dark</string>
    <string name="green_light">Green Light</string>
    <string name="orange_dark">Orange Dark</string>
    <string name="orange_light">Orange Light</string>
    <string name="red_dark">Red Dark</string>
    <string name="red_light">Red Light</string>
    <string name="purple">Purple</string>
    <string name="set_theme">Set Theme</string>
    <string name="formula">Solve Quadratic Equation</string>
    <string name="a">a</string>
    <string name="b">b</string>
    <string name="c">c</string>
    <string name="get_form">Get S.S</string>
    <string name="r1">r1</string>
    <string name="r2">r2</string>
    <string name="circle">Relation between circles</string>
    <string name="get_relation">Get Relation</string>
    <string name="mn">MN</string>
    <string name="cirhelp">MN is the distance between the two centers</string>
    <string name="cir">Circumference &amp; Area of circle</string>
    <string name="raduis">Radius</string>
    <string name="get_cir">Get Circumference and Area</string>
    <string name="sqr">Parameter and Area of Square</string>
    <string name="length">Length</string>
    <string name="get_sqr">Get Parameter and Area</string>
    <string name="sine">Sine</string>
    <string name="cosine">Cosine</string>
    <string name="tane">Tane</string>
    <string name="sine1">Sine<sup>-1</sup></string>
    <string name="cosine1">Cosine<sup>-1</sup></string>
    <string name="tane1">Tane<sup>-1</sup></string>
    <string name="angle">Angle</string>
    <string name="get_sin">Get Sine</string>
    <string name="get_cos">Get Cosine</string>
    <string name="get_tan">Get Tane</string>
    <string name="getangle">Get Angle</string>
    <string name="arc">Arc Length</string>
    <string name="getarc">Get Arc Length</string>
    <string name="measure">Measure</string>
    <string name="about">About Us</string>
    <string name="ce">Current Color</string>
    <string name="graph">Graph</string>
    <string name="enter_two_points">Enter Two Points</string>
    <string name="z1">Z<sub>1</sub></string>
    <string name="z2">Z<sub>2</sub></string>
    <string name="title_activity_tools_home">ToolsHome</string>
    <string name="title_activity_sci_home">SciHome</string>
    <string name="title_activity_sci_convert">SciConvert</string>
    <string name="title_activity_scorchcal">Scorchcal</string>
    <string name="title_activity_temp_cal">TempCal</string>
    <string name="title_activity_heat_cal">HeatCal</string>

</resources>