<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DistanceActivity"
    android:background="#FFe5e5e5" >
    <LinearLayout
        android:id="@+id/layoutAction"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:orientation="horizontal" >

		
        <TextView
            android:id="@+id/TextView05"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="0dp"
            android:paddingBottom="0dp"
            android:paddingLeft="5dp"
            android:paddingTop="5dp"
            android:text="@string/title_activity_distance"
            android:textColor="#FF777777"
            android:textSize="30sp" />

    </LinearLayout>
<LinearLayout
        android:id="@+id/linearLayoutTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/layoutAction"
        android:layout_marginTop="28dp"
        android:layout_marginBottom="28dp" >

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/point1"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:layout_weight="1"
            android:background="#FF9933CC"
            android:gravity="center" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/point2"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:layout_weight="1"
            android:background="#FF669900"
            android:gravity="center" />

    </LinearLayout>
    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:baselineAligned="false" 
        android:layout_below="@+id/linearLayoutTitle"
        android:background="@drawable/card_white"
        
        android:layout_marginRight="8dp"
        android:layout_marginLeft="8dp"
        >

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/rarrow"
        android:layout_marginLeft="8dp"
            android:textColor="#FF777777"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <EditText
            android:id="@+id/editDisX1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="0.99"
            android:ems="10"
            android:hint="@string/X1"
            android:textColor="#FF777777"
            android:inputType="numberDecimal|numberSigned"
            android:imeOptions="actionNext" >
        </EditText>

        <TextView
            android:id="@+id/TextView01"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="bottom"
            android:text="@string/comma"
            android:textColor="#FF777777"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <EditText
            android:id="@+id/editDisY1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="0.99"
            android:ems="10"
            android:hint="@string/Y1"
            android:textColor="#FF777777"
            android:inputType="numberDecimal|numberSigned"
            android:imeOptions="actionNext" />

        <TextView
            android:id="@+id/TextView02"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/darrow"
            android:textColor="#FF777777"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <EditText
            android:id="@+id/editDisX2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="0.99"
            android:ems="10"
            android:hint="@string/X2"
            android:textColor="#FF777777"
            android:inputType="numberDecimal|numberSigned"
            android:imeOptions="actionNext" />

        <TextView
            android:id="@+id/TextView03"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="bottom"
            android:text="@string/comma"
            android:textColor="#FF777777"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <EditText
            android:id="@+id/editDisY2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="0.99"
            android:ems="10"
            android:hint="@string/Y2"
            android:textColor="#FF777777"
            android:inputType="numberDecimal|numberSigned"
        	android:imeOptions="actionGo" />

        <TextView
            android:id="@+id/TextView04"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/larrow"
            android:layout_marginRight="8dp"
            android:textColor="#FF777777"
            android:textAppearance="?android:attr/textAppearanceLarge" />
    </LinearLayout>

    <TextView
        android:id="@+id/textDisRes"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/mathbttn"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/linearLayout2"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:paddingTop="2dp"
        android:textIsSelectable="true" />

    <Button
        android:id="@+id/mathbttn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="#FFffffff"
        android:textColor="#FF777777"
        android:onClick="distance"
        android:text="@string/get_distance" />

</RelativeLayout>