<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity"
    android:background="#FFe5e5e5" >

<LinearLayout
        android:id="@+id/layoutActionMain"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:orientation="horizontal">

		
        <TextView
            android:id="@+id/TextView05"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="0dp"
            android:paddingBottom="0dp"
            android:paddingLeft="5dp"
            android:paddingTop="5dp"
            android:text="@string/app_name"
            android:textColor="#FF777777"
            android:textSize="30sp" />

    </LinearLayout>

    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scrollbars="vertical"
        android:paddingTop="3sp"
        android:overScrollMode="ifContentScrolls">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginRight="8dp"
            android:layout_marginLeft="8dp" >

            <Button
                android:id="@+id/Button01"
                style="@style/ButtonText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/card_white"
                android:onClick="slope"
                android:text="@string/title_activity_slope"
                android:layout_marginBottom="1sp"
            android:textColor="#FF777777"
                android:textSize="20sp" />

            <Button
                android:id="@+id/Button03"
                style="@style/ButtonText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/card_white"
                android:onClick="distance"
                android:text="@string/title_activity_distance" 
                android:layout_marginBottom="1sp"
            android:textColor="#FF777777"
                android:textSize="20sp"/>
			<Button
                android:id="@+id/Button0z3"
                style="@style/ButtonText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/card_white"
                android:onClick="distance3d"
                android:text="@string/title_activity_3ddistance" 
                android:layout_marginBottom="1sp"
            android:textColor="#FF777777"
                android:textSize="20sp"/>
            <Button
                android:id="@+id/Button02"
                style="@style/ButtonText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/card_white"
                android:onClick="mid"
                android:text="@string/title_activity_mid"
                android:layout_marginBottom="1sp"
            android:textColor="#FF777777"
                android:textSize="20sp" />

            <Button
                android:id="@+id/Button04"
                style="@style/ButtonText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="1sp"
                android:background="@drawable/card_white"
                android:onClick="formula"
                android:text="@string/formula"
            android:textColor="#FF777777"
                android:textSize="20sp" />
            
            <Button
                android:id="@+id/Button05"
                style="@style/ButtonText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="1sp"
                android:background="@drawable/card_white"
                android:onClick="circle"
                android:text="@string/circle"
            android:textColor="#FF777777"
                android:textSize="20sp" />
			<Button
                android:id="@+id/Button06"
                style="@style/ButtonText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="1sp"
                android:background="@drawable/card_white"
                android:onClick="circum"
                android:text="@string/cir"
            android:textColor="#FF777777"
                android:textSize="20sp" />

			<Button
			    android:id="@+id/Button07"
			    style="@style/ButtonText"
			    android:layout_width="match_parent"
			    android:layout_height="wrap_content"
			    android:layout_marginBottom="1sp"
			    android:background="@drawable/card_white"
			    android:onClick="sqr"
			    android:text="@string/sqr"
            android:textColor="#FF777777"
			    android:textSize="20sp" />
			
			<Button
			    style="@style/ButtonText"
			    android:layout_width="match_parent"
			    android:layout_height="wrap_content"
			    android:layout_marginBottom="1sp"
			    android:background="@drawable/card_white"
			    android:onClick="arc"
			    android:text="@string/arc"
            android:textColor="#FF777777"
			    android:textSize="20sp" />
			
			<Button
			    style="@style/ButtonText"
			    android:layout_width="match_parent"
			    android:layout_height="wrap_content"
			    android:layout_marginBottom="1sp"
			    android:background="@drawable/card_white"
			    android:onClick="graph"
			    android:text="@string/graph"
            android:textColor="#FF777777"
			    android:textSize="20sp" />

			<LinearLayout
			    android:layout_width="match_parent"
			    android:layout_height="wrap_content"
			    android:orientation="horizontal" >

				<Button
				    android:layout_weight="1"
				    android:id="@+id/Button10"
				    style="@style/ButtonText"
				    android:layout_width="match_parent"
				    android:layout_height="wrap_content"
				    android:layout_marginBottom="1sp"
				    android:background="@drawable/card_white"
				    android:onClick="sin"
				    android:text="@string/sine"
				    android:textSize="20sp" />

				<Button
				    android:layout_weight="3"
				    android:id="@+id/Button11"
				    style="@style/ButtonText"
				    android:layout_width="match_parent"
				    android:layout_height="wrap_content"
				    android:layout_marginBottom="1sp"
				    android:background="@drawable/card_white"
				    android:onClick="xSin"
				    android:text="@string/neg"
				    android:textSize="20sp" />

			</LinearLayout>

			<LinearLayout
			    android:layout_width="match_parent"
			    android:layout_height="wrap_content"
			    android:orientation="horizontal" >
				<Button
				    android:layout_weight="1"
				    android:id="@+id/Button09"
				    style="@style/ButtonText"
				    android:layout_width="match_parent"
				    android:layout_height="wrap_content"
				    android:layout_marginBottom="1sp"
				    android:background="@drawable/card_white"
				    android:onClick="cos"
				    android:text="@string/cosine"
				    android:textSize="20sp" />

				<Button
				    android:id="@+id/Button12"
				    style="@style/ButtonText"
				    android:layout_width="match_parent"
				    android:layout_height="wrap_content"
				    android:layout_marginBottom="1sp"
				    android:layout_weight="3"
				    android:background="@drawable/card_white"
				    android:onClick="xCos"
				    android:text="@string/neg"
				    android:textSize="20sp" />

			</LinearLayout>
			<LinearLayout
			    android:layout_width="match_parent"
			    android:layout_height="wrap_content"
			    android:orientation="horizontal" >
	            <Button
	                android:layout_weight="1"
	                android:id="@+id/Button08"
	                style="@style/ButtonText"
	                android:layout_width="match_parent"
	                android:layout_height="wrap_content"
	                android:layout_marginBottom="1sp"
                    android:background="#FF669900"
                    android:onClick="tan"
	                android:text="@string/tane"
	                android:textSize="20sp" />
	            <Button
	                android:layout_weight="3"
	                style="@style/ButtonText"
	                android:layout_width="match_parent"
	                android:layout_height="wrap_content"
	                android:layout_marginBottom="1sp"
	                android:background="#FF669900"
	                android:onClick="xTan"
	                android:text="@string/neg"
	                android:textSize="20sp" />
            </LinearLayout>
        </LinearLayout>

    </ScrollView>

</LinearLayout>