<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MidActivity"
    android:background="#FFe5e5e5" >

    <LinearLayout
        android:id="@+id/layoutAction"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:background="#FFe5e5e5"
        android:orientation="horizontal" >

        <ImageView
            android:id="@+id/imageView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/app_name"
            android:src="@drawable/ic_launcher" />

        <TextView
            android:id="@+id/TextView05"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="0dp"
            android:gravity="center_vertical"
            android:paddingBottom="0dp"
            android:paddingLeft="5dp"
            android:paddingTop="5dp"
            android:textColor="#FF777777"
            android:text="@string/cosine"
            android:textSize="19sp" />
    </LinearLayout>

    <Button
        android:id="@+id/mathbttn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:background="#FFffffff"
        android:textColor="#FF777777"
        android:onClick="cos"
        android:text="@string/get_cos" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/layoutAction"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="28dp"
        android:layout_marginBottom="28dp"
        android:gravity="center"
        android:background="#FF109D59"
        android:textColor="#FFffffff"
        android:text="@string/angle"
        android:textSize="22sp" />

    <EditText
        android:id="@+id/editCosR"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:gravity="center"
        android:background="@drawable/card_white"
        
        android:text="edit value"
        android:textColor="#FF777777"
        android:textSize="22sp"
        tools:ignore="HardcodedText"
        android:layout_below="@+id/textView2"
        android:ems="10"
        android:imeOptions="actionGo"
        android:inputType="numberDecimal" > <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/textCosRes"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/mathbttn"
        android:layout_below="@+id/editCosR"
        android:paddingTop="2dp"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textIsSelectable="true" />

</RelativeLayout>